--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Welcome to the Ankit's holrmepage
+title: Welcome to the Ankit's homepage
 description: Coming soon
