--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Welcome to the Ankit's homepage
-description: Coming soon
+title: IPO Kart
+description: IPOKart.co.in, India's No. 1 IPO investment portal provide recent IPO information from primary stock market. IPO Tools available on this website includes IPO Ratings, IPO Grading, IPO Reviews, Grey Market Premiums of IPO's, IPO News and IPO Performance Tracker.
